# alpha-board

./: .env.example  .gitignore  CLAUDE.md  PERFORMANCE_AUDIT_REPORT.md  PRD.md  README.md  TECHNICAL_SPEC.md  dbprovider.md  following.js  mockup-command-center.html  next-steps.md  rankings-header-snapshot.md  rankings-snapshot.md  tf-snapshot.md  uxui-team-report.md
worker/: .env.example  Dockerfile  agents.json  fly.toml  pyproject.toml
worker/alembic/: env.py
worker/alembic/versions/: 001_initial_schema.py  002_agent_tables.py  003_seed_data.py  004_add_engine_column.py  005_seed_rule_based_agents.py  006_widen_symbol_columns.py  007_notification_preferences.py  008_agent_health_status.py  009_add_timeframe_regimes.py  010_backtest_tables.py  011_twitter_tables.py  012_tweet_signals.py  013_tweet_agents.py  014_hybrid_agents.py  015_agent_pruning.py  016_fleet_lessons.py  017_service_health.py  018_agent_uuid.py  019_llm_settings.py  020_tweet_relevance_filter_setting.py  021_exchange_settings.py  022_memecoins.py  023_agent_max_positions.py  024_drop_max_positions.py  025_account_metadata.py  026_token_analysis.py  026_token_tracker.py  027_processing_tables.py  028_season1_verdicts.py  029_season2_reset.py  030_remove_1w_timeframe.py  031_variable_seasons.py  032_analytics_indexes.py
worker/src/: cache.py  config.py  db.py  events.py  llm_settings.py  main.py  sse.py
worker/src/agents/: __init__.py  context.py  evolution.py  executor.py  (+6 more)
worker/tests/: test_agents.py  test_evolution.py  test_exchange.py  test_indicators.py  test_pipeline.py  test_scoring.py
(+429 files in other folders)
